#278 fix: Tab Group titles collapse incorrectly

--- a/projects/biit-ui/navigation/src/biit-tab-group/biit-tab-group.component.scss
+++ b/projects/biit-ui/navigation/src/biit-tab-group/biit-tab-group.component.scss
@@ -33,14 +33,9 @@ $error: #A1093F;
 
         &:not(.active) {
           a {
-            font-size: 0;
-            height: 1rem;
-            width: 1rem;
-            text-align: center;
-
-            &:first-letter {
-              font-size: 1rem;
-            }
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
           }
         }
       }
@@ -56,6 +51,9 @@ $error: #A1093F;
       &:not(.active) {
         background: $unselected;
         color: white;
+        flex-basis: 50%;
+        flex-wrap: wrap;
+        min-width: 0;
 
         &.error {
           background: $error;
